Prevent the logo from being cut off at the top

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -228,7 +228,7 @@ $logo-padding: 45px
       background: url(../images/logo.png) no-repeat left center
       padding-left: $logo-padding
       font-size: 28px
-      line-height: 38px
+      line-height: 39px
       .title-first
         color: $color-title
       .title-second
@@ -385,7 +385,7 @@ $color-error: #E36666
   float: right
   height: 34px
   margin-top: 4px
-  line-height: 38px
+  line-height: 39px
   input.ref
     margin: 0
     width: 200px
